close #350 individual stories should have their own stylesheet

--- a/_posts/2019-10-07-use-prose.md
+++ b/_posts/2019-10-07-use-prose.md
@@ -8,57 +8,45 @@ published: true
 description: Looking for a intuitive way to edit content on your website without being a developer?
 ---
 
-Hello! Today i'll show you how to edit your texts, image paths, titles etc. of your pages on your Jekyll site.
+Hello! Today i'll show you how to edit your texts, image paths, titles etc. of your pages on your Jekyll site. Then you might ask: "How will i do that without having all the knowlegde of how to set up, style and code like a web developer?!"
 
-<br>
-
-Then you might ask: "How will i do that without having all the knowlegde of how to set up, style and code like a webdeveloper?!"
+---
 
 ### With prose.io of course!
 
-<hr>
-
 Preparing:
-
-<br>
 
 - Make sure you have a Github account ( If not you can create a [Github account here](https://github.com/join?source=header-home){: target="blank"} )
 - Make sure your Github account have access to the Jekyll site you want to edit (You don't need access if the site is on your github account, else contact the site repository owners)
 
 ### Step 1 - Logging into Prose.io
 
-<hr>
-
 Go to [Prose.io](https://prose.io){: target="blank"}
 
-<br>
+---
 
 Click the button "AUTHORIZE ON GITHUB" (This gives prose.io permission to access the repositories YOU have access to on GitHub)
 
-<br>
+---
 
 Now you'll see the repositories you have access to, click on the one you wanna edit
 
 ### Step 2 - Editing the content
 
-<hr>
-
 Inside are all the pages and texts that you can edit
 
-<br>
+---
 
 Choose a page, text or create one by clicking the green "New file" button at the top
 
-<br>
+---
 
 You can now edit the text like you want.
 The basic rules in markdown (the format you are using for editing the texts) is:
 
-<br>
+---
 
 - Headlines are defined by `#` like this
-
-<br>
 
 # #Headline 1
 ## ##Headline 2
@@ -68,31 +56,33 @@ The basic rules in markdown (the format you are using for editing the texts) is:
 - Links are written like this
  `[your link text](your web address)`
 
+---
+
 Prose also have a toolbox at the top of the text editor you can use for uploading images and so on...
 
-<br>
+---
 
 You can preview your text by clicking the eye on the right.
 
-<br>
+---
 
 There might be some other features in the specific page/text that you can edit, try clicking the metadata button to the right (the lines) If the page/text have some special values you can edit them her, like order, description, author, if it is featured and so on..
 
-<br>
+---
 
 When you are done, click they grey DONE button
 
-### Step 3 - Saving the content
+---
 
-<hr>
+### Step 3 - Saving the content
 
 When everything is like you want, you can click on the save icon to the right. It'll show you all the changes that have been made before it saves it.
 
-<br>
+---
 
 In the box to the right you should write short about what you have changed.
 
-<br>
+---
 
 Then you click COMMIT
 
