close #470 create text for general software under services

--- a/_posts/2019-10-21-software.md
+++ b/_posts/2019-10-21-software.md
@@ -50,4 +50,4 @@ Wanna know more? Learn about our workflow [here](/flow/)
 
 ---
 
-Do you want become a software owner? Fill out [this form](/form/) and make it easier for us to know about you and your software needs.
+Do you want become a software owner? [Contact us](/contact/) and make it easier for us to know about you and your software needs.
