close #573 use bootstrap and mixins on services

--- a/_posts/2020-02-17-code-cafe.md
+++ b/_posts/2020-02-17-code-cafe.md
@@ -10,7 +10,7 @@ description: Full Day Training Concepts and Format
 published: true
 ---
 
-### The Full-Day CoDe Café is facilitated learning with peers and experts in cosy, relaxed ambience. It builds on the principles of situated-learning which defies traditional class-rooom training and emphasize actual learning over mere knowledge transfer. The CoDe Cafés strive to build communities of peers.
+The Full-Day CoDe Café is facilitated learning with peers and experts in cosy, relaxed ambience. It builds on the principles of situated-learning which defies traditional class-rooom training and emphasize actual learning over mere knowledge transfer. The CoDe Cafés strive to build communities of peers.
 
 The purpose of the CoDe Café is to sustain learning in a community context - or even to establish such a community, if it doesn’t exist already.
 
