Organizing global plus comments

--- a/_posts/2019-11-06-propay.md
+++ b/_posts/2019-11-06-propay.md
@@ -43,7 +43,7 @@ Som ProPay kunde forventer vi derfor, at du løbende giver feedback på produkte
 
 ### Continuous Delivery - mikro-leverancer
 
-Vi arbejder med Continous Delivery, som er et koncept hvor vi leverer projektets features i en lean strøm.
+Vi arbejder med Continous Delivery, som er et koncept hvor vi leverer projektets features i en lind strøm.
 Features leveres i mikro-leverancer, hvis cyklus er kort: vi antager, vi bygger, vi modtager feedback, vi måler og lærer og bygger igen. 
 Dine brugeres feedback på disse mikro-leverencer er også nøglen til success.
 
